finished transferring new project

--- a/freebird.html
+++ b/freebird.html
@@ -175,7 +175,7 @@
       <ul>
         <li><strong>Keycaps: </strong>OTC Modo Light</li>
         <li>
-          <strong>Switches: </strong>JWICK Semi-Silents w/ 58g Dual Stage
+          <strong>Switches: </strong>JWICK Semi-Silents w/ 58g Dual-Stage
           Springs
         </li>
         <li><strong>Plate: </strong>POM plate</li>
