--- a/index.html
+++ b/index.html
@@ -164,14 +164,15 @@
           allows me to work with hardware through soldering the electrical
           components onto each keyboard, and software while programming its
           firmware. My interest in this hobby has led me to create various tools
-          related to mechanical keyboards that I use regularly in this hobby
-          that can be viewed in my projects below. I have also documented some
-          of the keyboards in my collection at the bottom of my portfolio.
+          related to mechanical keyboards that I use regularly in this hobby.
+          These tools are highlighted in my projects below. I have also
+          documented some of the keyboards in my collection at the bottom of my
+          portfolio.
         </p>
         <div class="resume__wrapper">
           <a
             class="resume__link"
-            href="https://drive.google.com/file/d/1nf56wJ4ZMQwGK14ghYaeLt85sZ-oiyy_/view?usp=sharing"
+            href="https://drive.google.com/file/d/10grMtfjXOZk9o9tgmfMMiXWxJztsJ_de/view?usp=sharing"
             target="_blank"
           >
             <i class="fa-solid fa-file"></i>
