fixed wording in new project

--- a/keebcompanion.html
+++ b/keebcompanion.html
@@ -312,7 +312,7 @@
 
       <p>
         The tables for both of the tools use primary keys to distinguish rows of
-        user data. Additionally, KeebTimer features an additional table with a
+        user data. Additionally, KeebTimer features an second table with a
         foreign key in order to implement a one-to-many relationship for this
         application. The queries utilize aggregate and window functions as well
         as joins to extract specific information on the user data.
