--- a/keebcompanion.html
+++ b/keebcompanion.html
@@ -338,7 +338,7 @@
         interfaces of each application. All of the pages in both tools are
         "React arrow function components". These pages utilize the Axios NPM
         package to send requests to the REST API from the client side.
-        Additoinally, React hooks such as useState, useEffect, and useRef are
+        Additionally, React hooks such as useState, useEffect, and useRef are
         used to dynamically restore previously existing states for certain
         pages.
       </p>
